# play-dvd

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
share/applications/: play-dvd.desktop
src/: Rating.cpp  Rating.h  Settings.cpp  Settings.h  Title.cpp  Title.h  dump.cpp  dump.h  main.cpp  mpv.cpp  mpv.h
